--- a/interfaces/RGBDSensor.yaml
+++ b/interfaces/RGBDSensor.yaml
@@ -9,21 +9,22 @@ interface:
     provides:
       '/rgbd_sensor/rgb/camera_info':
         type: 'sensor_msgs/CameraInfo'
+        description: 'RGB camera information.'
       '/rgbd_sensor/rgb/image_raw':
         type: 'sensor_msgs/Image'
         description: 'Raw color image to go along with the camera info.'
       '/rgbd_sensor/rgb/image/color':
-        description: 'color image to go along with the camera info.'
-        type: 'sensor_msgs/PointCloud2'
-        description: 'The color image and depth image composed into a registered, colored point cloud.'
+        type: 'sensor_msgs/Image'
+        description: 'Color image to go along with the camera info.'
       '/rgbd_sensor/depth/camera_info':
         type: 'sensor_msgs/CameraInfo'
+        description: 'Depth camera information.'
       '/rgbd_sensor/depth/image_raw':
         type: 'sensor_msgs/Image'
         description: 'Raw depth image to go along with the camera info.'
       '/rgbd_sensor/depth/points':
         type: 'sensor_msgs/PointCloud2'
-        description: 'Depth image stream turtned into point clouds.'
+        description: 'Depth image stream turned into point clouds.'
       '/rgbd_sensor/depth_registered/points':
         type: 'sensor_msgs/PointCloud2'
         description: 'The color image and depth image composed into a registered, colored point cloud.'
