--- a/interfaces/RGBDSensor.yaml
+++ b/interfaces/RGBDSensor.yaml
@@ -13,9 +13,11 @@ interface:
         type: 'sensor_msgs/Image'
         description: 'Raw color image to go along with the camera info.'
       '/rgbd_sensor/rgb/image_color':
-        description: 'color image to go along with the camera info.'
-        type: 'sensor_msgs/PointCloud2'
-        description: 'The color image and depth image composed into a registered, colored point cloud.'
+        type: 'sensor_msgs/Image'
+        description: 'Color image to go along with the camera info.'
+      '/rgbd_sensor/rgb/image_color/compressed':
+        description: 'Compressed color image to go along with the camera info.'
+        type: 'sensor_msgs/Image'
       '/rgbd_sensor/depth/camera_info':
         type: 'sensor_msgs/CameraInfo'
       '/rgbd_sensor/depth/image_raw':
@@ -23,7 +25,7 @@ interface:
         description: 'Raw depth image to go along with the camera info.'
       '/rgbd_sensor/depth/points':
         type: 'sensor_msgs/PointCloud2'
-        description: 'Depth image stream turtned into point clouds.'
+        description: 'Depth image stream turned into point clouds.'
       '/rgbd_sensor/depth_registered/points':
         type: 'sensor_msgs/PointCloud2'
         description: 'The color image and depth image composed into a registered, colored point cloud.'
